<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- kunal.vaghmare@gmail.com (RollingScenes) -->
    <string name="GOOGLE_API_KEY_NORMAL">AIzaSyCD_99XPNZJ0z2rjafD7BF1YTeZboSvYFg</string>
    <string name="GOOGLE_API_KEY_PRODUCTION">AIzaSyDpBeJzYLVDOMkVuuW8S0aL9PnRCL0pL2A</string>
    <!-- kunal.vaghmare@gmail.com - facebook (RollingScenes) -->
    <string name="FACEBOOK_APP_ID">453241574834392</string>
    <string name="app_name">Rolling Scenes</string>
    <string name="rolling_scenes">ROLLING SCENES</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_title">Add Title</string>
    <string name="event_venue">VENUE</string>
    <string name="event_time">Add Time</string>
    <string name="event_cost">COST</string>
    <string name="monk_adds">Monk Adds</string>
    <string name="cs_add_image">Add Image</string>
    <string name="event_desc">This is Description for item </string>
    <string name="event_category">CATEGORY</string>
    <string name="event_synopsis">DESCRIPTION</string>
    <string name="event_date">DATE &amp; TIME</string>
    <string name="event_location">LOCATION</string>
    <string name="main_page">Main Page</string>
    <string name="child_page">Child Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search Events</string>
    <string name="refresh">Refresh Events</string>
    <string name="logout">LOGOUT</string>
    <string name="categories">CATEGORIES</string>
    <string name="hint_search_text">Enter search text here&#8230;</string>
    <string name="internet_connection_problem">Check your internet connection&#8230;</string>
    <string name="cd_app_logo">App Logo</string>
    <string name="loading">Loading Image&#8230;</string>
    <string name="no_events">No Events available&#8230;</string>
    <string name="txtCrashTitle">Application is crashed!!</string>
    <string name="report">Report</string>
    <string name="txtSendReportHint">Do you want to report a bug..??</string>
    <string name="cancel">Cancel</string>

</resources>