<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >
    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@android:id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_gravity="center"
            android:drawablePadding="8dp"
            android:paddingBottom="1dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="8dp"
            android:gravity="center"
            android:text="@string/txtCrashTitle"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" 
            android:background="@color/blue_app_color"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="@string/txtSendReportHint" 
            android:textSize="@dimen/_16sp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue_app_color"
                android:maxLines="2"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <Button
                android:id="@+id/btnReport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue_app_color"
                android:maxLines="2"
                android:text="@string/report"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>