<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/desc_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.daimajia.slider.demo.MainActivity" >

        <com.rollingscenes.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp"
            custom:auto_cycle="false"
            custom:indicator_visibility="visible"
            custom:pager_animation="Accordion"
            custom:pager_animation_span="0" />

        <com.rollingscenes.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20dp"
            android:gravity="center"
            custom:selected_color="#0095BF"
            custom:selected_drawable="@drawable/bird"
            custom:selected_height="@dimen/_6dp"
            custom:selected_padding_left="@dimen/_5dp"
            custom:selected_padding_right="@dimen/_5dp"
            custom:selected_width="@dimen/_6dp"
            custom:shape="oval"
            custom:unselected_color="#55333333"
            custom:unselected_height="@dimen/_6dp"
            custom:unselected_padding_left="@dimen/_5dp"
            custom:unselected_padding_right="@dimen/_5dp"
            custom:unselected_width="@dimen/_6dp" />

        <com.rollingscenes.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator2"
            style="@style/AndroidImageSlider_Corner_Oval_Orange"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/slider"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            android:background="@color/dark_devider" />

        <RelativeLayout
            android:id="@+id/rel_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/slider"
            android:background="@color/blue_app_color"
            android:padding="@dimen/_20dp" >

            <TextView
                android:id="@+id/txt_add_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_time_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rel_add_title"
            android:background="@color/white"
            android:paddingBottom="@dimen/_20dp"
            android:paddingLeft="@dimen/_20dp"
            android:paddingRight="@dimen/_20dp" >

            <TextView
                android:id="@+id/txt_add_date"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50dp"
                android:gravity="center_vertical"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/event_date"
                android:textColor="@color/blue_app_color"
                android:textSize="@dimen/_16sp" />

            <TabHost
                android:id="@android:id/tabhost"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_below="@id/txt_add_date"
                android:layout_centerVertical="true" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp"
                    android:orientation="vertical" >

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="0" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:scrollbars="none" >

                        <TabWidget
                            android:id="@android:id/tabs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white" />
                    </HorizontalScrollView>
                </LinearLayout>
            </TabHost>
        </RelativeLayout>

        <View
            android:id="@+id/view_below_synopsis"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/rel_time_items"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:background="@color/blue_app_color" />

        <RelativeLayout
            android:id="@+id/rel_add_title_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_below_synopsis"
            android:background="@color/white"
            android:padding="@dimen/_20dp" >

            <TextView
                android:id="@+id/txt_add_venue"
                android:layout_width="@dimen/_150dp"
                android:layout_height="@dimen/_50dp"
                android:gravity="center_vertical"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/event_venue"
                android:textColor="@color/blue_app_color"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/txt_add_venue_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_toRightOf="@id/txt_add_venue"
                android:gravity="center_vertical"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/event_venue"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_16sp" />

            <View
                android:id="@+id/view_below_venue"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/txt_add_venue"
                android:background="@color/blue_app_color" />

            <TextView
                android:id="@+id/txt_add_cost"
                android:layout_width="@dimen/_150dp"
                android:layout_height="@dimen/_50dp"
                android:layout_below="@id/view_below_venue"
                android:gravity="center_vertical"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/event_cost"
                android:textColor="@color/blue_app_color"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/txt_add_cost_value"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_below="@id/view_below_venue"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_toRightOf="@id/txt_add_cost"
                android:gravity="center_vertical"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/event_venue"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_16sp" />

            <View
                android:id="@+id/view_below_cost"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/txt_add_cost"
                android:background="@color/blue_app_color" />

            <TextView
                android:id="@+id/txt_add_category"
                android:layout_width="@dimen/_150dp"
                android:layout_height="@dimen/_50dp"
                android:layout_below="@id/view_below_cost"
                android:gravity="center_vertical"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/event_category"
                android:textColor="@color/blue_app_color"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/txt_add_category_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_below="@id/view_below_cost"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_toRightOf="@id/txt_add_category"
                android:gravity="center_vertical"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/event_venue"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_16sp" />

            <View
                android:id="@+id/view_below_category"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@id/txt_add_category"
                android:background="@color/blue_app_color" />

            <TextView
                android:id="@+id/txt_add_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50dp"
                android:layout_below="@id/view_below_category"
                android:gravity="center_vertical"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/event_synopsis"
                android:textColor="@color/blue_app_color"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/txt_add_synopsis_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_add_synopsis"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:gravity="fill"
                android:text="@string/event_venue"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rel_add_title_desc"
            android:background="@color/white" >

            <View
                android:id="@+id/view_below_date"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginRight="@dimen/_20dp"
                android:background="@color/blue_app_color" />

            <TextView
                android:id="@+id/txt_add_location"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50dp"
                android:layout_below="@id/view_below_date"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginRight="@dimen/_20dp"
                android:gravity="center_vertical"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/event_location"
                android:textColor="@color/blue_app_color"
                android:textSize="@dimen/_16sp" />

            <LinearLayout
                android:id="@+id/lin_layout_map"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300dp"
                android:layout_below="@id/txt_add_location"
                android:orientation="vertical" >

                <fragment
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    class="com.google.android.gms.maps.SupportMapFragment" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>